solving bug with z-index

--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -9,7 +9,7 @@
     border-radius: 5px;
     border:1px solid whitesmoke;
     margin: 0;
-    z-index: 1000;
+    z-index: 10;
 }
 
 .prevArrow:hover,.nextArrow:hover{
@@ -37,7 +37,6 @@
     position: relative;
     display: flex;
     align-items: center;
-    isolation: isolate;
 }
 
 .track{
