--- a/src/components/Video/Video.module.css
+++ b/src/components/Video/Video.module.css
@@ -11,7 +11,6 @@
     width: 100%;
     height: 100vh;
     background: rgba(0,0,0,.75);
-    isolation: isolate;
     z-index: 1000;
 }
 
